src/objects/Case_Closed_Templates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Template to use by EmailMessage trigger when closed cases receive emails.
Check class: sendEmailToSenderWhenCaseClosed.cls, method sendEmailToSenderWhenCaseClosed()</description>
    <fields>
        <fullName>CNS_Contact__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <description>if current template is for CNS contacts</description>
        <inlineHelpText>values can be: true, false or Default</inlineHelpText>
        <label>CNS Contact</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <description>language for selected template</description>
        <inlineHelpText>&quot;Default&quot; value is for the default template when no language is defined</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <inlineHelpText>&quot;Default&quot; value is for all Source Systems</inlineHelpText>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <description>template Id</description>
        <label>Template Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case Closed Templates</label>
</CustomObject>